another 100 errors down